Expose parameters in Bench