@@ -44,6 +44,9 @@ public class Bench {
         var mGrid = List.of(64); // List.of(16, 24, 32, 48, 64, 96, 128);
         var efConstructionGrid = List.of(100); // List.of(60, 80, 100, 120, 160, 200, 400, 600, 800);
         var overqueryGrid = List.of(1.0, 2.0); // rerankK = oq * topK
+        var neighborOverflowGrid = List.of(2.0f);
+        var addHierarchyGrid = List.of(true);
+        var usePruningGrid = List.of(false);
         List<Function<DataSet, CompressorParameters>> buildCompression = Arrays.asList(
 //                ds -> new PQParameters(ds.getDimension() / 8, 256, ds.similarityFunction == VectorSimilarityFunction.EUCLIDEAN, UNWEIGHTED),
                 __ -> CompressorParameters.NONE
@@ -67,57 +70,58 @@ public class Bench {
 
         // large embeddings calculated by Neighborhood Watch.  100k files by default; 1M also available
         var coreFiles = List.of(
-                "degen-200k",
-                "ada002-100k",
-                "cohere-english-v3-100k",
-                "openai-v3-small-100k",
-                "nv-qa-v4-100k",
-                "colbert-1M",
-                "gecko-100k");
-        executeNw(coreFiles, pattern, buildCompression, featureSets, searchCompression, mGrid, efConstructionGrid, overqueryGrid);
+                "degen-200k"
+//                "ada002-100k",
+//                "cohere-english-v3-100k",
+//                "openai-v3-small-100k",
+//                "nv-qa-v4-100k",
+//                "colbert-1M",
+//                "gecko-100k"
+        );
+        executeNw(coreFiles, pattern, buildCompression, featureSets, searchCompression, mGrid, efConstructionGrid, neighborOverflowGrid, addHierarchyGrid, overqueryGrid, usePruningGrid);
 
-        var extraFiles = List.of(
-                "openai-v3-large-3072-100k",
-                "openai-v3-large-1536-100k",
-                "e5-small-v2-100k",
-                "e5-base-v2-100k",
-                "e5-large-v2-100k");
-        executeNw(extraFiles, pattern, buildCompression, featureSets, searchCompression, mGrid, efConstructionGrid, overqueryGrid);
-
-        // smaller vectors from ann-benchmarks
-        var hdf5Files = List.of(
-                // large files not yet supported
-                // "hdf5/deep-image-96-angular.hdf5",
-                // "hdf5/gist-960-euclidean.hdf5",
-                "glove-25-angular.hdf5",
-                "glove-50-angular.hdf5",
-                "lastfm-64-dot.hdf5",
-                "glove-100-angular.hdf5",
-                "glove-200-angular.hdf5",
-                "nytimes-256-angular.hdf5",
-                "sift-128-euclidean.hdf5");
-        for (var f : hdf5Files) {
-            if (pattern.matcher(f).find()) {
-                DownloadHelper.maybeDownloadHdf5(f);
-                Grid.runAll(Hdf5Loader.load(f), mGrid, efConstructionGrid, featureSets, buildCompression, searchCompression, overqueryGrid);
-            }
-        }
-
-        // 2D grid, built and calculated at runtime
-        if (pattern.matcher("2dgrid").find()) {
-            searchCompression = Arrays.asList(__ -> CompressorParameters.NONE,
-                                              ds -> new PQParameters(ds.getDimension(), 256, true, UNWEIGHTED));
-            buildCompression = Arrays.asList(__ -> CompressorParameters.NONE);
-            var grid2d = DataSetCreator.create2DGrid(4_000_000, 10_000, 100);
-            Grid.runAll(grid2d, mGrid, efConstructionGrid, featureSets, buildCompression, searchCompression, overqueryGrid);
-        }
+//        var extraFiles = List.of(
+//                "openai-v3-large-3072-100k",
+//                "openai-v3-large-1536-100k",
+//                "e5-small-v2-100k",
+//                "e5-base-v2-100k",
+//                "e5-large-v2-100k");
+//        executeNw(extraFiles, pattern, buildCompression, featureSets, searchCompression, mGrid, efConstructionGrid, neighborOverflowGrid, addHierarchyGrid, overqueryGrid, neighborOverflowGrid, usePruningGrid);
+//
+//        // smaller vectors from ann-benchmarks
+//        var hdf5Files = List.of(
+//                // large files not yet supported
+//                // "hdf5/deep-image-96-angular.hdf5",
+//                // "hdf5/gist-960-euclidean.hdf5",
+//                "glove-25-angular.hdf5",
+//                "glove-50-angular.hdf5",
+//                "lastfm-64-dot.hdf5",
+//                "glove-100-angular.hdf5",
+//                "glove-200-angular.hdf5",
+//                "nytimes-256-angular.hdf5",
+//                "sift-128-euclidean.hdf5");
+//        for (var f : hdf5Files) {
+//            if (pattern.matcher(f).find()) {
+//                DownloadHelper.maybeDownloadHdf5(f);
+//                Grid.runAll(Hdf5Loader.load(f), mGrid, efConstructionGrid, neighborOverflowGrid, addHierarchyGrid, featureSets, buildCompression, searchCompression, overqueryGrid, usePruningGrid);
+//            }
+//        }
+//
+//        // 2D grid, built and calculated at runtime
+//        if (pattern.matcher("2dgrid").find()) {
+//            searchCompression = Arrays.asList(__ -> CompressorParameters.NONE,
+//                                              ds -> new PQParameters(ds.getDimension(), 256, true, UNWEIGHTED));
+//            buildCompression = Arrays.asList(__ -> CompressorParameters.NONE);
+//            var grid2d = DataSetCreator.create2DGrid(4_000_000, 10_000, 100);
+//            Grid.runAll(grid2d, mGrid, efConstructionGrid, neighborOverflowGrid, addHierarchyGrid, featureSets, buildCompression, searchCompression, overqueryGrid, usePruningGrid);
+//        }
     }
 
-    private static void executeNw(List<String> coreFiles, Pattern pattern, List<Function<DataSet, CompressorParameters>> buildCompression, List<EnumSet<FeatureId>> featureSets, List<Function<DataSet, CompressorParameters>> compressionGrid, List<Integer> mGrid, List<Integer> efConstructionGrid, List<Double> efSearchGrid) throws IOException {
+    private static void executeNw(List<String> coreFiles, Pattern pattern, List<Function<DataSet, CompressorParameters>> buildCompression, List<EnumSet<FeatureId>> featureSets, List<Function<DataSet, CompressorParameters>> compressionGrid, List<Integer> mGrid, List<Integer> efConstructionGrid, List<Float> neighborOverflowGrid, List<Boolean> addHierarchyGrid, List<Double> efSearchGrid, List<Boolean> usePruningGrid) throws IOException {
         for (var nwDatasetName : coreFiles) {
             if (pattern.matcher(nwDatasetName).find()) {
                 var mfd = DownloadHelper.maybeDownloadFvecs(nwDatasetName);
-                Grid.runAll(mfd.load(), mGrid, efConstructionGrid, featureSets, buildCompression, compressionGrid, efSearchGrid);
+                Grid.runAll(mfd.load(), mGrid, efConstructionGrid, neighborOverflowGrid, addHierarchyGrid, featureSets, buildCompression, compressionGrid, efSearchGrid, usePruningGrid);
             }
         }
     }
